# online-game

./: CMakeLists.txt
client/: CMakeLists.txt
client/include/: Client.hpp
client/src/: Client.cpp  main.cpp
common/: ClientPayload.hpp  Player.hpp  ServerPayload.hpp
common/include/: PlayerState.hpp  constants.hpp
common/src/: PlayerState.cpp
